--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="styles.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Times+New+Roman:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">   
     <title>Mahit's Portfolio</title>
     <script src="https://kit.fontawesome.com/27e5cf34bc.js" crossorigin="anonymous"></script>
     <link href="https://www.mahitm.com/favicon.ico" rel="icon" />
@@ -34,8 +34,8 @@
             <img src="./assets/react.svg" />
         </div>
         <div class="headings">
-            <h1>Aditya Balas's page. <span style="color:var(--accent)">Based in USA</span>.</h1>
-            <h2>I’m a junior who enjoys playing bass.</h2>
+            <h1>Aditya Balas's awesome good project. <span style="color:var(--accent)">I live in New Jersey</span>.</h1>
+            <h2>I’m a junior who enjoys money.</h2>
             <div class="socials">
                 <a href="https://www.github.com/mahitmehta" target="_blank" rel="noreferrer noopener">
                     <i class="fa-brands fa-github"></i>
