--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Times+New+Roman:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">   
-    <title>Mahit's Portfolio</title>
+    <title>Aditya's Portfolio</title>
     <script src="https://kit.fontawesome.com/27e5cf34bc.js" crossorigin="anonymous"></script>
     <link href="https://www.mahitm.com/favicon.ico" rel="icon" />
 </head>
@@ -35,7 +35,7 @@
         </div>
         <div class="headings">
             <h1>Aditya Balas's awesome good project. <span style="color:var(--accent)">I live in New Jersey</span>.</h1>
-            <h2>I’m a junior who enjoys money.</h2>
+            <h2>I am a junior who enjoys making websites definitely.</h2>
             <div class="socials">
                 <a href="https://www.github.com/mahitmehta" target="_blank" rel="noreferrer noopener">
                     <i class="fa-brands fa-github"></i>
@@ -52,7 +52,7 @@
     <section id="experiences">
         <div class="headers">
             <h2>Experience</h2>
-            <h1>My jazz combo.</h1>
+            <h1>Check out this awesome logo.</h1>
         </div>
         <div class="companies">
             <div class="company">
